--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,6 +12,8 @@ menu:
 - {name: 'Object detection', file: 'projects.html'}
 - {name: 'Object detection', file: 'projects.html'}
 - {name: 'GNN and RL', file: 'projects.html'}
+- {name: 'Knowledge Base', file: 'https://dell-research-harvard.github.io/blog.html'}
+
 # - {name: 'Team',     file: 'team.html'}
 
 social:
