--- a/_data/meta.yml
+++ b/_data/meta.yml
@@ -16,8 +16,7 @@ index:
     # and democratize access to data that can elucidate pressing social science questions.
     # These methods will also make valuable information more accessible to the public and those who require accessible formats.
   contact: >
-    Melissa Dell
-    https://dell-research-harvard.github.io/
+    [Melissa Dell](https://dell-research-harvard.github.io/)
     Department of Economics  
     Littauer Center M-24  
      
