--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@
 menu:
 - {name: '',    file: ''}
 - {name: 'Retrieval', file: 'retrieval.html'}
-- {name: 'Clustering', file: 'clustering.html'}
+# - {name: 'Clustering', file: 'clustering.html'}
 - {name: 'Classification', file: 'classification.html'}
 # - {name: 'Seq2seq', file: 'seq2seq.html'}
 # - {name: 'Object detection', file: 'objdet.html'}
