--- a/_data/_config.yml
+++ b/_data/_config.yml
@@ -42,21 +42,21 @@ collections:
   classification:
     output: true
     permalink: /:collection/:name  
-  # clustering:
-  #   output: true
-  #   permalink: /:collection/:name   
-  # objdet:
-  #   output: true
-  #   permalink: /:collection/:name   
-  # seq2seq:
-  #   output: true
-  #   permalink: /:collection/:name   
-  # gnn:
-  #   output: true
-  #   permalink: /:collection/:name    
-  # datasets:
-  #   output: true
-  #   permalink: /:collection/:name    
+  clustering:
+    output: true
+    permalink: /:collection/:name   
+  objdet:
+    output: true
+    permalink: /:collection/:name   
+  seq2seq:
+    output: true
+    permalink: /:collection/:name   
+  gnn:
+    output: true
+    permalink: /:collection/:name    
+  datasets:
+    output: true
+    permalink: /:collection/:name    
   resources:
     output: true
     permalink: /:collection/:name 
