--- a/_data/_config.yml
+++ b/_data/_config.yml
@@ -60,9 +60,9 @@ collections:
   resources:
     output: true
     permalink: /:collection/:name 
-  teaching:
-    output: true
-    permalink: /:collection/:name
+  # teaching:
+  #   output: true
+  #   permalink: /:collection/:name
   wp:
     output: true 
     permalink: /:collection/:name
