--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,12 +5,13 @@
 
 menu:
 - {name: '',    file: ''}
-- {name: 'Retrieval', file: 'retrieval.html'}
-- {name: 'Clustering', file: 'clustering.html'}
-- {name: 'Classification', file: 'classification.html'}
-- {name: 'Seq2seq', file: 'seq2seq.html'}
-- {name: 'Object detection', file: 'objdet.html'}
-- {name: 'GNN and RL', file: 'gnn.html'}
+# - {name: 'Retrieval', file: 'retrieval.html'}
+# - {name: 'Clustering', file: 'clustering.html'}
+# - {name: 'Classification', file: 'classification.html'}
+# - {name: 'Seq2seq', file: 'seq2seq.html'}
+# - {name: 'Object detection', file: 'objdet.html'}
+# - {name: 'GNN and RL', file: 'gnn.html'}
+- {name: 'Packages', file: 'resources.html'}
 - {name: 'Datasets', file: 'datasets.html'}
 - {name: 'Knowledge Base', url: 'https://dell-research-harvard.github.io/blog.html'}
 
