--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,7 +11,7 @@ menu:
 # - {name: 'Seq2seq', file: 'seq2seq.html'}
 # - {name: 'Object detection', file: 'objdet.html'}
 # - {name: 'GNN and RL', file: 'gnn.html'}
-- {name: 'Packages', file: 'resources.html'}
+- {name: 'Packages', file: 'packages.html'}
 - {name: 'Datasets', file: 'datasets.html'}
 - {name: 'Knowledge Base', url: 'https://dell-research-harvard.github.io/blog.html'}
 
