--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Melissa Dell
+title: EconDL
 description: >
-  Melissa Dell
+  EconDL
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -36,12 +36,36 @@ collections:
   projects:
     output: true
     permalink: /:collection/:name 
+  retrieval:
+    output: true
+    permalink: /:collection/:name 
+  classification:
+    output: true
+    permalink: /:collection/:name  
+  clustering:
+    output: true
+    permalink: /:collection/:name   
+  objdet:
+    output: true
+    permalink: /:collection/:name   
+  seq2seq:
+    output: true
+    permalink: /:collection/:name   
+  gnn:
+    output: true
+    permalink: /:collection/:name    
+  datasets:
+    output: true
+    permalink: /:collection/:name    
   resources:
     output: true
     permalink: /:collection/:name 
-  teaching:
+  packages:
     output: true
     permalink: /:collection/:name
+  # teaching:
+  #   output: true
+  #   permalink: /:collection/:name
   wp:
     output: true 
     permalink: /:collection/:name
