--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,8 +13,8 @@ menu:
 # - {name: 'GNN and RL', file: 'gnn.html'}
 - {name: 'Packages', file: 'packages.html'}
 - {name: 'Datasets', file: 'datasets.html'}
-# - {name: 'Knowledge Base', file: 'blog.html'}
-- {name: 'Knowledge Base', url: 'https://dell-research-harvard.github.io/blog.html'}
+- {name: 'Knowledge Base', file: 'blog.html'}
+# - {name: 'Knowledge Base', url: 'https://dell-research-harvard.github.io/blog.html'}
 
 # - {name: 'Team',     file: 'team.html'}
 
