--- a/_data/_config.yml
+++ b/_data/_config.yml
@@ -93,7 +93,7 @@ pagination:
 
   # Optional, the default name of the index file for generated pages (e.g. 'index.html')
   # Without file extension
-  indexpage: 'blog.html'
+  indexpage: 'index.html'
   trail: 
     before: 2 # The number of links before the current page
     after: 2  # The number of links after the current page
