Added redirect link for replication package

--- a/_data/meta.yml
+++ b/_data/meta.yml
@@ -1,7 +1,7 @@
 index:
   about: >
     EconDL is a comprehensive resource detailing applications of Deep Learning in Economics. 
-    This is a companion website to the paper *Deep Learning for Economists* and aims to be a go-to resource 
+    This is a companion website to the paper *[Deep Learning for Economists](https://www.aeaweb.org/articles?id=10.1257/jel.20241733)* and aims to be a go-to resource 
     for economists and other social scientists for applying tools provided by deep learning in their 
     research. 
     
